# cloud-cleaner-dashboard

./: LICENSE.md  NOTIFICATIONS_SETUP.md  README.md  RELEASES.md  ROADMAP.md  SCHEDULED_SCANS.md  docker-compose.yml
backend/: .dockerignore  DATABASE_SETUP.md  Dockerfile  main.py  pyproject.toml  requirements.txt  run_flower.py  start_celery_beat.sh  start_celery_worker.sh  test_email.py
backend/alembic/: env.py
backend/alembic/versions/: 62262af5debe_initial_schema_with_aws_services_.py
backend/api/: celery_monitor.py  cost_analysis.py  ebs.py  ec2.py  iam.py  notifications.py  s3.py  schedule.py
backend/core/: aws_client.py  cache.py  celery_app.py  config.py  tasks.py
backend/models/: __init__.py  cost_history.py  resource.py  scan_history.py  service.py
docs/: ARCHITECTURE_V0.5.md  ARCHITECTURE_V0.5_REVISED.md  IMPLEMENTATION_PLAN_V0.5.md  V0.5_MIGRATION_GUIDE.md  api.md  configuration.md  scheduled-scanning.md  setup.md  usage.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/cost-analysis/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: AlertPanel.tsx  DeleteConfirmationModal.tsx  EmptyState.tsx  ErrorAlert.tsx  LoadingSpinner.tsx  NotificationCenter.tsx  NotificationSetupGuide.tsx  RegionSelector.tsx  ResourceDetailsModal.tsx  ResourceFilters.tsx  ResourceTab.tsx  ResourceTable.tsx  ScheduleSettings.tsx  StatCard.tsx
frontend/src/hooks/: useNotifications.ts  useResourceFilters.ts
